@@ -831,6 +831,7 @@ ei_nuclear-reactor:remove-bonus=Remove neighbor bonus from nuclear fission react
 ei_max_updates_per_tick=Maximum script updates per tick
 ei_ticks_per_spaced_update=Amount of ticks for interval updates
 ei_beacon-overload=Enable beacon overload
+ei_barrel:multiplier=Barrel capacity multiplier
 
 [map-gen-preset-name]
 default=Vanilla Default [img=utility/warning_icon] [font=default-bold][color=yellow](CHANGE THIS TO EI-DEFAULT)[/color][/font] [img=utility/warning_icon]
