@@ -6,6 +6,8 @@ Date: XX.XX.2023
     - induction matrixes now show current stored capacity (PR #29)
   Changes:
     - alien update balance changes
+    - decreased stack size of barrels to 1
+    - increased capacity of barrels by 10 (default see settings)
   Bugfixes:
     - fixed gold text plates integration (PR #28)
     - resized beacons and turbines to allow walking past (PR #27)
